k8s/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: kafka
    spec:
      priorityClassName: medium-priority
      containers:
      - env:
        - name: KAFKA_ADVERTISED_LISTENERS
          value: PLAINTEXT://kafka:9092
        - name: KAFKA_ADVERTISED_HOST_NAME
          value: "192.168.99.120"
        - name: KAFKA_LISTENERS
          value: PLAINTEXT://kafka:9092
        - name: KAFKA_ADVERTISED_PORT
          value: "30092"
        - name: KAFKA_BROKER_ID
          value: "1"
        - name: KAFKA_ZOOKEEPER_CONNECT
          value: 192.168.99.120:30181
        - name: KAFKA_CREATE_TOPICS
          value: "myTopic:1:1"
        - name: KAFKA_PORT
          value: "9092"
        image: wurstmeister/kafka:2.12-2.4.0
        imagePullPolicy: ""
        name: kafka
        ports:
        - containerPort: 9092
        resources: {}
      hostname: kafka
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
