k8s/neo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: neo
  name: neo
spec:
  type: NodePort
  ports:
  - name: neo-port-http
    port: 7474
    targetPort: 7474
    nodePort: 30474
  - name: neo-port-bolt
    port: 7687
    targetPort: 7687
    nodePort: 30687
  - name: neo-port-https
    port: 7473
    nodePort: 30473
    targetPort: 7473
  selector:
    io.kompose.service: neo
