k8s/spark-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: spark
  name: spark
spec:
  type: NodePort
  ports:
  - name: spark-port
    port: 7077
    targetPort: 7077
    nodePort: 30077
  selector:
    io.kompose.service: spark
